# playpen

./: AGENTS.md  CONTEXT-MAP.md  Cargo.toml  README.md  justfile  mise.toml
.tasks/: PLAN.md
docs/: ARCHITECTURE.md  CODING_GUIDELINE.md  CODING_GUILDLINE.md  DEVLOPING.md  seatbelt.md  zed-acp-meta.md
docs/adr/: 0000-acp-terminal-output-extension.md
example/: playpen.toml  sandbox.toml
example/profiles/code/: instructions.md  profile.toml
rustpkg/playpen/: Cargo.toml
rustpkg/playpen-acp/: CONTEXT.md  Cargo.toml  README.md
rustpkg/playpen-acp/docs/: 00_initialize.md  10_session_setup.md  21_prompt_turn.md  90_slash_commands.md
rustpkg/playpen-acp/src/: acp_content.rs  acp_content_test.rs  acp_state.rs  acp_state_test.rs  agent.rs  agent_test.rs  dispatch.rs  display.rs  display_test.rs  event_mapper.rs  event_mapper_test.rs  event_mapping.rs  lib.rs  session_store.rs  slash_command.rs  slash_command_test.rs
rustpkg/playpen-acp/src/handler/: initialize.rs  mod.rs  prompt.rs  prompt_turn.rs  session.rs  session_delete.rs  session_list.rs  session_setup.rs
rustpkg/playpen-acp/tests/: integration_test.rs  session_store_test.rs
rustpkg/playpen-agent/: Cargo.toml
rustpkg/playpen-agent-core/: CONTEXT.md  Cargo.toml  README.md
rustpkg/playpen-agent-core/src/: config.rs  config_test.rs  lib.rs  tool.rs
rustpkg/playpen-agent-core/src/agent/: mod.rs  runner.rs  runner_test.rs  service.rs  settings.rs  settings_test.rs
rustpkg/playpen-agent-core/src/model/: deepseek.rs  mod.rs  model.rs  model_test.rs  registry.rs  registry_test.rs
rustpkg/playpen-agent-core/src/profile/: loader.rs  manager.rs  mod.rs  profile.rs  profile_test.rs
rustpkg/playpen-agent-core/src/session/: env.rs  env_test.rs  memory.rs  memory_test.rs  message.rs  message_test.rs  mod.rs  session.rs  session_test.rs  store.rs  store_test.rs
rustpkg/playpen-agent-core/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  mod.rs  move.rs  read.rs  webfetch.rs  write.rs
rustpkg/playpen-agent-core/src/workspace/: mod.rs  workspace_test.rs
rustpkg/playpen-agent-core/tests/: agent_loop_test.rs  edit_move_test.rs  file_tools_test.rs  search_tools_test.rs  webfetch_test.rs
rustpkg/playpen-agent/doc/: crates.js  help.html  settings.html  src-files.js
rustpkg/playpen-agent/doc/rig_core/: all.html  index.html
rustpkg/playpen-agent/doc/search.index/: root.js
rustpkg/playpen-agent/doc/search.index/name/: 54da93591ada.js
rustpkg/playpen-agent/doc/search.index/normalizedName/: 3ae7426b4609.js
rustpkg/playpen-agent/doc/src/rig_core/: null.html
rustpkg/playpen-agent/src/: client.rs  client_test.rs  convert.rs  convert_test.rs  lib.rs  runner.rs  runner_test.rs
rustpkg/playpen-agent/src/testing/: mod.rs
rustpkg/playpen-agent/src/tool/: bash.rs  bash_test.rs  edit.rs  find.rs  grep.rs  mod.rs  move.rs  read.rs  webfetch.rs  write.rs
rustpkg/playpen-config/: CONTEXT.md  Cargo.toml  README.md
rustpkg/playpen-config/src/: config.rs  config_test.rs  lib.rs  model.rs  model_test.rs
rustpkg/playpen-config/src/preset/: mod.rs  model.rs
rustpkg/playpen-content/: Cargo.toml
rustpkg/playpen-content/src/: content.rs  content_test.rs  event.rs  event_test.rs  lib.rs
rustpkg/playpen-profile/: CONTEXT.md  Cargo.toml  README.md
rustpkg/playpen-profile/src/: agent_profile.rs  agent_profile_loader.rs  agent_profile_loader_test.rs  lib.rs  skill.rs  skill_test.rs
rustpkg/playpen-sandbox/: CONTEXT.md  Cargo.toml  README.md  justfile
rustpkg/playpen-sandbox/src/: create.rs  diagnostic.rs  lib.rs  sandbox.rs  sandbox_test.rs
rustpkg/playpen-sandbox/src/config/: mod.rs  parser.rs  parser_test.rs  policy.rs  policy_test.rs  shell.rs  shell_test.rs
rustpkg/playpen-sandbox/src/macos/: mod.rs  sandbox.rs  sandbox_test.rs  seatbelt.rs  seatbelt_test.rs
rustpkg/playpen-session/: Cargo.toml
rustpkg/playpen-session/src/: events.rs  lib.rs  role.rs  service.rs  session.rs  state.rs  stats.rs
rustpkg/playpen-session/src/store/: convert.rs  convert_test.rs  mod.rs  mod_test.rs
rustpkg/playpen-session/src/store/entities/: events.rs  mod.rs  session_events.rs  sessions.rs
rustpkg/playpen-session/src/store/migration/: m20200101_000001_create_tables.rs  m20260702_000001_add_action_id.rs  mod.rs
rustpkg/playpen-toolkit/: CONTEXT.md  Cargo.toml  README.md
rustpkg/playpen-toolkit/src/: fetch.rs  fetch_test.rs  fs.rs  fs_test.rs  lib.rs  terminal.rs  terminal_test.rs  toolkit.rs  toolkit_test.rs
rustpkg/playpen-toolkit/src/native/: mod.rs  native_fetch.rs  native_fetch_test.rs  native_fs.rs  native_fs_test.rs  native_terminal.rs  native_terminal_test.rs
rustpkg/playpen-toolkit/src/sandbox/: fs.rs  fs_test.rs  mod.rs  terminal.rs  terminal_test.rs
rustpkg/playpen-zed-agent/: Cargo.toml  README.md
rustpkg/playpen-zed-agent/src/: agent.rs  lib.rs  tools.rs  zed.rs  zed_test.rs
rustpkg/playpen/src/: config.rs  db.rs  lib.rs  log.rs  main.rs  printer.rs
rustpkg/playpen/src/commands/: access.rs  acp.rs  agent.rs  config.rs  mod.rs  printer.rs  run.rs  session.rs
rustpkg/sandbox/: CONTEXT.md  Cargo.toml  README.md  justfile
rustpkg/sandbox/src/: config.rs  config_test.rs  lib.rs  policy.rs  policy_test.rs  sandbox.rs  seatbelt.rs  seatbelt_test.rs  shell.rs  shell_test.rs
rustpkg/sandbox/tests/: sandbox_test.rs
tool/rust/: justfile
