[package]
name = "playpen-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
playpen-agent-core = { path = "../playpen-agent-core" }
rig-core = "0.38"
agent-client-protocol = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tokio-util = "0.7"
tempfile = "3"
