[package]
name = "playpen-agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sandbox = { path = "../sandbox" }
rig-core = "0.38"
merge = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"
anyhow = "1"
async-trait = "0.1"
quick-xml = "0.40"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
schemars = { version = "1", features = ["derive"] }
futures = "0.3"
regex = "1"
thiserror = "2"
tracing = "0.1"
ignore = "0.4"
grep = "0.4"
walkdir = "2"
glob = "0.3"
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
httpmock = "0.7"
pretty_assertions = "1"
tempfile = "3"
