[package]
name = "playpen-agent"
version = "0.1.0"
edition = "2024"
description = "Agent v2：自研 Agent Runner，基于 rig + playpen-session"

[dependencies]
playpen-content = { path = "../playpen-content" }
playpen-config = { path = "../playpen-config" }
playpen-profile = { path = "../playpen-profile" }
playpen-toolkit = { path = "../playpen-toolkit", features = ["sandbox"] }
playpen-sandbox = { path = "../playpen-sandbox" }
playpen-session = { path = "../playpen-session" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"
rig-core = { version = "0.39", features = ["test-utils"] }
schemars = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio"] }
