[package]
name = "playpen-toolkit"
version = "0.1.0"
edition = "2024"
description = "工具抽象层：Filesystem/Terminal/WebFetcher trait、ToolAdapter"

[features]
default = []
sandbox = ["dep:playpen-sandbox", "dep:playpen-config"]

[dependencies]
playpen-sandbox = { path = "../playpen-sandbox", optional = true }
playpen-config = { path = "../playpen-config", optional = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = "0.7"
thiserror = "2"
regex = "1"
grep = "0.4"
ignore = "0.4"
glob = "0.3"
walkdir = "2"
reqwest = { version = "0.13", features = ["blocking"] }
scraper = "0.27"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
httpmock = "0.7"
