[package]
name = "playpen"
version = "0.1.0"
edition = "2024"

[dependencies]
sandbox = { path = "../sandbox" }
playpen-zed-agent = { path = "../playpen-zed-agent" }
playpen-agent-core = { path = "../playpen-agent-core" }
playpen-acp = { path = "../playpen-acp" }
merge = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
rustyline = "18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
crossterm = "0.29"
console = "0.16"
tracing = "0.1"
